html for gallery section

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       </h1>
 
       <div class="button">
-        <a class="button__tickets">КВИТКИ</a>
+        <a href="#" class="button__tickets">КВИТКИ</a>
         <button class="button__arrow"></button>
       </div>
     </header>
@@ -92,6 +92,32 @@
             Від класицизму до романтизму
           </h3>
         </div>
+      </section>
+
+      <section class="gallery">
+        <h2 class="title title--secondary">
+          Галерея
+        </h2>
+
+        <img src="./images/gallery/gallery_image1.jpg"
+          alt="gallery_image1"
+          class="gallery__picture"
+        >
+
+        <img src="./images/gallery/gallery_image2.jpg"
+        alt="gallery_image1"
+        class="gallery__picture"
+        >
+
+        <img src="./images/gallery/gallery_image3.jpg"
+        alt="gallery_image1"
+        class="gallery__picture"
+        >
+
+        <img src="./images/gallery/gallery_image4.jpg"
+        alt="gallery_image1"
+        class="gallery__picture"
+        >
       </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
