--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter:wght@400;500;600;700&family=Manrope:wght@400;500;700&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&family=Poppins:ital,wght@0,400;0,600;1,400;1,600&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
       <div class="header__bg"></div>
-      <div class="container">
+      <div class="container ">
         <div class="top__bar">
           <a href="#side__bar" class="icon icon__burger"></a>
           <a href="#" class="logo">
@@ -30,20 +33,19 @@
           <div class="header__line--line"></div>
         </span>
 
-        <!-- <h2 class="header__item">Актуальні події</h2> -->
       </div>
     </header>
     <aside class="side__bar" id="side__bar">
       <div class="wrapper">
-        <div class="side__top">
+        <div class="side__bar__top">
           <a href="#" class="icon icon--close"></a>
-          <div class="side__top--left">
-            <a href="#" class="side__link">Галерея</a>
-            <a href="#" class="side__link">Виставки та події</a>
+          <div class="side__bar__top--left">
+            <a href="#galery" class="side__link">Галерея</a>
+            <a href="#events" class="side__link">Виставки та події</a>
           </div>
-          <div class="side__top--right">
-            <a href="#" class="side__link">Про Нас</a>
-            <a href="#" class="side__link">Контакти</a>
+          <div class="side__bar__top--right">
+            <a href="#aboute__us" class="side__link">Про Нас</a>
+            <a href="#contacts" class="side__link">Контакти</a>
           </div>
         </div>
 
@@ -66,6 +68,17 @@
         </div>
       </div>
     </aside>
+
+    <section class="current__events" id="current__events">
+      <h2 class="section__title current__events--title">Актуальні події</h2>
+    </section>
+
+    <section class="galery" id="galery"></section>
+
+    <section class="events" id="events"></section>
+
+    <footer class="contacts" id="contacts"></footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
