--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <title>Museum</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.scss">
+
+    <body class="page__body" id="home">
+
+        <header class="header__content">
+          <div class="container">
+               <div class="header__wrapper">
+
+                <div class="header__top">
+                  <a href="#menu" class=" icon icon--menu header__menu-opener"></a>
+                  <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+                </div>
+
+              <div class="header__tickets">
+                <a class="header__ticket">КВИТКИ</a>
+              </div>
+
+
+                <p class="header__verticalText">ПОДІЇ</p>
+
+              </div>
+
+          </div>
+
+
+        <!-- <div class="header__images">
+          <img class="header__img" src="./images/museum/museum.svg" alt="museum">
+          <a class="header__images--logo" alt="logo">
+        </div> -->
+
+
+  </header>
+
+        <nav class="page__menu menu" id="menu">
+          <div class="container">
+
+            <div class="menu__content">
+              <a href="#" class="menu__close"></a>
+
+
+  <div class="menu__list">
+    <div class="menu__list--top">
+      <li class="menu__item">
+        <a href="#home" class="menu__link">Галерея</a>
+      </li>
+
+      <li class="menu__item">
+        <a href="#home" class="menu__link">Виставки та <br> події </a>
+      </li>
+    </div>
+
+    <div class="menu__list--bottom">
+      <li class="menu__item">
+        <a href="#home" class="menu__link">Про нас</a>
+      </li>
+      <li class="menu__item">
+        <a href="#home" class="menu__link">Контакти</a>
+      </li>
+    </div>
+
+</div>
+
+<!-- <hr class="menu__hr"> -->
+
+    <div class="menu__work work">
+      <div class="work--wrapper">
+      <h4 class="work__title">Графік роботи</h4>
+      <div class="work__title--list">
+        <li>12:00 — 20:00 середа</li>
+        <li> 12:00 — 20:00 четвер</li>
+        <li> 12:00 — 20:00 п’ятниця</li>
+        <li>11:00 — 19:00 субота</li>
+        <li>11:00 — 19:00 неділя</li>
+      </div>
+    </div>
+
+    <div class="work__add">
+      <p class="work__text">Вихідні: понеділок, <br> вівторок <br>
+        Каса припиняє роботу за <br> 1 годину
+        до закриття <br> музею
+      </p>
+    </div>
+  </div>
+
+
+
+
+
+
+            </div>
+          </div>
+        </nav>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
