--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,421 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./images/icon/icon-logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="top-bar header--bar">
+        <a href="#menu" class="icon icon--menu"></a>
+      </div>
+      <a href="#" class="top-bar__logo">
+        NA
+        <br>
+        MU
+      </a>
+
+      <aside class="menu menu--header page__menu" id="menu">
+        <a href="#" class="icon icon--close"></a>
+
+        <div class="menu__content menu__content--header">
+          <nav class="nav menu__nav nav--header">
+            <ul class="nav__list nav__list--header">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__schedule menu__schedule--header">
+          <p class="menu__schedule-title menu__schedule-title--header">
+            Графік роботи
+          </p>
+
+          <p class="menu__schedule-description menu__schedule-description--header">
+            <span class="menu--bold">12:00 — 20:00</span> середа
+            <br>
+            <span class="menu--bold">12:00— 20:00</span> четвер
+            <br>
+            <span class="menu--bold">12:00 — 20:00</span> п’ятниця
+            <br>
+            <span class="menu--bold">11:00 — 19:00</span> субота
+            <br>
+            <span class="menu--bold">11:00 — 19:00</span> неділя
+          </p>
+
+          <p class="menu__schedule-description menu__schedule-description--header">
+            <span class="menu--bold">Вихідні:</span> понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+      </aside>
+      <div class="header__content">
+        <div class="header__content-bottom">
+          <h1 class="header__content-bottom--title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+
+          <a href="#events" class="header__content-bottom--link">
+            ПОДІЇ
+          </a>
+
+          <form
+          class="form form--header"
+          onsubmit="this.reset(); return false;"
+          >
+            <input
+              class="form__input form__input--header"
+              type="email"
+              placeholder="КВИТКИ"
+              name="email"
+              required
+            >
+            <a href="#contacts" class="icon icon--arrow"></a>
+          </form>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <section class="events" id="events">
+        <div class="events__main">
+          <h2 class="title">
+            Актуальні події
+          </h2>
+          <article class="exhibition">
+            <div class="exhibition__content">
+              <img
+                src="./images/exhibition/exhibition-img-1.png"
+                alt="exhibition-img"
+                class="exhibition__content-image"
+              >
+
+              <div class="exhibition__content-text">
+                <p class="exhibition__content-text--description">
+                  ВИСТАВКА
+                </p>
+                <span class="exhibition__content-text--span">
+                  26.08-29.11.2019
+                </span>
+                <h3 class="exhibition__content-text--title">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="exhibition__content-text--description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+          </article>
+
+          <article class="exhibition">
+            <div class="exhibition__content">
+              <img
+                src="./images/exhibition/exhibition-img-2.png"
+                alt="exhibition-img"
+                class="exhibition__content-image"
+              >
+
+              <div class="exhibition__content-text">
+                <p class="exhibition__content-text--description">
+                  ВИСТАВКА
+                </p>
+                <span class="exhibition__content-text--span">
+                  26.08-29.11.2019
+                </span>
+                <h3 class="exhibition__content-text--title">
+                  І спогади і мрії
+                </h3>
+
+                <p class="exhibition__content-text--description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </article>
+
+        </div>
+      </section>
+
+      <div class="main__image">
+        <img
+          class="main__image-picture"
+          src="./images/exhibition/exhibition-img-3.png"
+          alt="exhibition-img"
+        >
+
+        <div class="main__image-text">
+          <p class="main__image-text--description">
+            ЛЕКЦІЯ
+          </p>
+
+          <span class="main__image-text--span">
+            26/08/2019 - 11:00
+          </span>
+
+          <h3 class="main__image-text--title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div>
+
+      <section class="gallery" id="gallery">
+        <div class="gallery__picture">
+          <h2 class="title">
+            Галерея
+          </h2>
+
+          <div class="gallery__picture-slider">
+            <img
+              class="gallery__picture-slider--image"
+              src="./images/gallery/gallery-img-1.png"
+              alt="gallery-img"
+              id="gallery-img-1"
+            >
+
+            <img
+              class="gallery__picture-slider--image"
+              src="./images/gallery/gallery-img-2.png"
+              alt="gallery-img"
+              id="gallery-img-2"
+            >
+
+            <img
+              class="gallery__picture-slider--image"
+              src="./images/gallery/gallery-img-3.png"
+              alt="gallery-img"
+              id="gallery-img-3"
+            >
+
+            <img
+              class="gallery__picture-slider--image"
+              src="./images/gallery/gallery-img-4.png"
+              alt="gallery-img"
+              id="gallery-img-4"
+            >
+          </div>
+        </div>
+
+        <div class="gallery__picture-dots">
+          <a class="icon icon--dots" href="#gallery-img-1"></a>
+          <a class="icon icon--dots" href="#gallery-img-2"></a>
+          <a class="icon icon--dots" href="#gallery-img-3"></a>
+          <a class="icon icon--dots" href="#gallery-img-4"></a>
+        </div>
+      </section>
+
+      <div class="main__subscription">
+        <h2 class="title--white">
+          Підписка
+        </h2>
+
+        <p class="main__subscription-description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form
+          class="form form--footer"
+          onsubmit="this.reset(); return false;"
+        >
+          <input
+            class="form__input form__input--footer"
+            type="email"
+            placeholder="E-mail"
+            name="email"
+            required
+          >
+
+          <a href="#" class="icon icon--arrow-black"></a>
+        </form>
+      </div>
+    </main>
+    <footer class="footer">
+      <section class="contacts" id="contacts">
+        <div class="contacts__top">
+          <a href="#" class="contacts--logo top-bar__logo">
+            NA
+            <br>
+            MU
+          </a>
+
+          <div class="contacts__top-link">
+            <a
+              href="https://facebook.com"
+              class="icon icon--facebook"
+              target="_blank"
+            >
+            </a>
+
+            <a
+              href="https://instagram.com"
+              class="icon icon--instagram"
+              target="_blank"
+            >
+            </a>
+          </div>
+        </div>
+        <div class="contacts__main">
+          <div class="contacts__main-schedule">
+            <p class="contacts__main-schedule--title">
+              Графік роботи
+            </p>
+            <ul class="contacts__main-schedule--description">
+              <li>
+                <span class="menu--bold">12:00 — 20:00 </span>
+                  середа
+              </li>
+
+              <li>
+                <span class="menu--bold">12:00 — 20:00 </span>
+                четвер
+              </li>
+
+              <li>
+                <span class="menu--bold">12:00 — 20:00 </span>
+                п’ятниця
+              </li>
+
+              <li>
+                <span class="menu--bold">11:00 — 19:00 </span>
+                субота
+              </li>
+
+              <li>
+                <span class="menu--bold">11:00 — 19:00 </span>
+                неділя
+              </li>
+            </ul>
+
+            <p class="contacts__main-schedule--description">
+              Вихідні понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="contacts__main-address">
+            <p class="contacts__main-address--title">
+              Контакти:
+            </p>
+
+            <div class="contacts__main-address--description">
+              <a href="https://maps.app.goo.gl/cRssmJntMh2Dqhcj6"
+                class="contacts__main-address--description-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <br>
+
+              <a href="tel:+38 (044) 278-13-57"
+                class="contacts__main-address--description-link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <br>
+
+              <a href="tel:факс +38 (044) 278-74-54"
+                class="contacts__main-address--description-link"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+
+              <br>
+
+              <a href="mailto:info@namu.kiev.ua"
+                class="contacts__main-address--description-link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+
+            <div class="contacts__main-address--button">
+              <a href="#" class="icon icon--arrow-up"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="footer__menu">
+        <div class="menu__content">
+          <nav class="nav nav--footer menu__nav">
+            <ul class="nav__list nav__list--footer">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link--footer">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#" class="nav__link--footer">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#events" class="nav__link--footer">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link--footer">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+
+      <div class="footer__bottom">
+        <p class="footer__bottom-description">
+          Designed by Zhyriada Marina
+        </p>
+        <p class="footer__bottom-description">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
