--- a/src/index.html
+++ b/src/index.html
@@ -95,19 +95,13 @@
             ПОДІЇ
           </a>
 
-          <form
-          class="form form--header"
-          onsubmit="this.reset(); return false;"
-          >
-            <input
-              class="form__input form__input--header"
-              type="email"
-              placeholder="КВИТКИ"
-              name="email"
-              required
+          <button
+            class="header__content-bottom--button"
+            onsubmit="this.reset(); return false;"
             >
+              КВИТКИ
             <a href="#contacts" class="icon icon--arrow"></a>
-          </form>
+          </button>
         </div>
       </div>
     </header>
@@ -251,6 +245,7 @@
 
         <form
           class="form form--footer"
+          autocomplete="off"
           onsubmit="this.reset(); return false;"
         >
           <input
