aome problem with main.js

--- a/src/index.html
+++ b/src/index.html
@@ -99,26 +99,55 @@
           Галерея
         </h2>
 
-        <img src="./images/gallery/gallery_image1.jpg"
-          alt="gallery_image1"
-          class="gallery__picture"
-        >
+        <div class="slider" id="mySlider">
+          <div class="slider-slides">
+            <article class="slider-slide is-active">
+              <img src="./images/gallery/gallery_image1.jpg"
+                alt="gallery_image1"
+                class="gallery__picture"
+              >
+            </article>
+            <article class="slider-slide">
+              <img src="./images/gallery/gallery_image2.jpg"
+                alt="gallery_image2"
+                class="gallery__picture"
+              >
+            </article>
+            <article class="slider-slide">
+              <img src="./images/gallery/gallery_image3.jpg"
+                alt="gallery_image3"
+                class="gallery__picture"
+              >
+            </article>
+            <article class="slider-slide">
+              <img src="./images/gallery/gallery_image4.jpg"
+                alt="gallery_image4"
+                class="gallery__picture"
+              >
+            </article>
+          </div>
 
-        <img src="./images/gallery/gallery_image2.jpg"
-        alt="gallery_image1"
-        class="gallery__picture"
-        >
-
-        <img src="./images/gallery/gallery_image3.jpg"
-        alt="gallery_image1"
-        class="gallery__picture"
-        >
-
-        <img src="./images/gallery/gallery_image4.jpg"
-        alt="gallery_image1"
-        class="gallery__picture"
-        >
+          <div class="slider-pagination">
+            <button class="slider-pagination-button is-active" type="button">
+              ::before
+              "1"
+            </button>
+            <button class="slider-pagination-button" type="button">
+              ::before
+              "2"
+            </button>
+            <button class="slider-pagination-button" type="button">
+              ::before
+              "3"
+            </button>
+            <button class="slider-pagination-button" type="button">
+              ::before
+              "4"
+            </button>
+          </div>
+        </div>
       </section>
+
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
