--- a/src/index.html
+++ b/src/index.html
@@ -95,13 +95,12 @@
             ПОДІЇ
           </a>
 
-          <button
-            class="header__content-bottom--button"
-            onsubmit="this.reset(); return false;"
-            >
+          <div class="header__content-bottom--button">
               КВИТКИ
-            <a href="#contacts" class="icon icon--arrow"></a>
-          </button>
+            <div class="header__content-bottom--button-link">
+              <a href="#contacts" class="icon icon--arrow"></a>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -244,19 +243,27 @@
         </p>
 
         <form
+          action="GET"
           class="form form--footer"
           autocomplete="off"
           onsubmit="this.reset(); return false;"
         >
-          <input
-            class="form__input form__input--footer"
-            type="email"
-            placeholder="E-mail"
-            name="email"
-            required
-          >
+          <label>
+            <input
+              class="form__input form__input--footer"
+              type="email"
+              placeholder="E-mail"
+              name="email"
+              required
+            >
+          </label>
 
-          <a href="#" class="icon icon--arrow-black"></a>
+          <button
+            type="submit"
+            class="form--footer-link"
+          >
+            <a class="icon icon--arrow-black"></a>
+          </button>
         </form>
       </div>
     </main>
@@ -340,7 +347,7 @@
 
               <br>
 
-              <a href="tel:+38 (044) 278-13-57"
+              <a href="tel:+380442781357"
                 class="contacts__main-address--description-link"
               >
                 тел. +38 (044) 278-13-57
@@ -348,7 +355,7 @@
 
               <br>
 
-              <a href="tel:факс +38 (044) 278-74-54"
+              <a href="tel:+380442787454"
                 class="contacts__main-address--description-link"
               >
                 факс +38 (044) 278-74-54
