--- a/src/index.html
+++ b/src/index.html
@@ -69,13 +69,62 @@
       </div>
     </aside>
 
-    <section class="current__events" id="current__events">
-      <h2 class="section__title current__events--title">Актуальні події</h2>
-    </section>
+    <main class="main">
+      <section class="current__events" id="current__events">
+        <article class="current article--1">
+          <h2 class="section__title current--title">Актуальні події</h2>
+          <div class="current__image">
+            <img
+              src="./images/current-images/picture_2.png"
+              alt="Picture"
+              class="current__picture"
+            >
+          </div>
+          <div class="current__description">
+            <div class="exhibition">
+              <p class="exhibition__item">ВИСТАВКА</p>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="exhibition__title">Йду і повертаюсь</h3>
+            <p class="exhibition__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </article>
+        <article class="current article--2">
+          <div class="current__image">
+            <img
+              src="./images/current-images/picture_1.png"
+              alt="Picture"
+              class="current__picture"
+            >
+          </div>
+          <div class="current__description">
+            <div class="exhibition">
+              <p class="exhibition__item">ВИСТАВКА</p>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="exhibition__title">І спогади і мрії</h3>
+            <p class="exhibition__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </article>
 
-    <section class="galery" id="galery"></section>
+        <img
+          class="current__bottom-bg"
+          src="./images/current-images/picture-3.svg"
+          alt="Picture"
+        >
 
-    <section class="events" id="events"></section>
+        <div class="current__bottom-description">
+          <div class="exhibition">
+            <p class="exhibition__item">ЛЕКЦІЯ</p>
+            <p class="exhibition__date">26/08/2019 - 11:00</p>
+          </div>
+          <h3 class="exhibition__title current__bottom__title">Від класицизму до романтизму</h3>
+        </div>
+
+      </section>
+      <section class="galery" id="galery"></section>
+      <section class="events" id="events"></section>
+    </main>
 
     <footer class="contacts" id="contacts"></footer>
 
