fixed header-image, fixed link in a button

--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,7 @@
             type="submit"
             class="form--footer-link"
           >
-            <a class="icon icon--arrow-black"></a>
+            <!-- <a class="icon icon--arrow-black"></a> -->
           </button>
         </form>
       </div>
