--- a/src/index.html
+++ b/src/index.html
@@ -6,99 +6,161 @@
     <title>Museum</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.scss">
+  </head>
 
-    <body class="page__body" id="home">
+  <body class="page__body" id="home">
 
-        <header class="header__content">
-          <div class="container">
-               <div class="header__wrapper">
+    <header class="header">
 
-                <div class="header__top">
-                  <a href="#menu" class=" icon icon--menu header__menu-opener"></a>
-                  <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
-                </div>
+      <div><a href="#" class="header__img"></a></div>
 
-              <div class="header__tickets">
-                <a class="header__ticket">КВИТКИ</a>
-              </div>
+      <div class="container">
+        <div class="header__wrapper">
 
-
-                <p class="header__verticalText">ПОДІЇ</p>
-
-              </div>
-
+          <div class="header__top">
+            <a href="#menu" class=" icon icon--menu header__menu-opener"></a>
+            <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
           </div>
 
+          <div class="header__main">
+            <div class="header__verticalText">ПОДІЇ</div>
+            <div class="header__button">
+              <a class="header__link" href="#">
+                <span class="header__tickets">
+                  КВИТКИ
+                </span>
+              </a>
 
-        <!-- <div class="header__images">
-          <img class="header__img" src="./images/museum/museum.svg" alt="museum">
-          <a class="header__images--logo" alt="logo">
-        </div> -->
-
-
-  </header>
-
-        <nav class="page__menu menu" id="menu">
-          <div class="container">
-
-            <div class="menu__content">
-              <a href="#" class="menu__close"></a>
-
-
-  <div class="menu__list">
-    <div class="menu__list--top">
-      <li class="menu__item">
-        <a href="#home" class="menu__link">Галерея</a>
-      </li>
-
-      <li class="menu__item">
-        <a href="#home" class="menu__link">Виставки та <br> події </a>
-      </li>
-    </div>
-
-    <div class="menu__list--bottom">
-      <li class="menu__item">
-        <a href="#home" class="menu__link">Про нас</a>
-      </li>
-      <li class="menu__item">
-        <a href="#home" class="menu__link">Контакти</a>
-      </li>
-    </div>
-
-</div>
-
-<!-- <hr class="menu__hr"> -->
-
-    <div class="menu__work work">
-      <div class="work--wrapper">
-      <h4 class="work__title">Графік роботи</h4>
-      <div class="work__title--list">
-        <li>12:00 — 20:00 середа</li>
-        <li> 12:00 — 20:00 четвер</li>
-        <li> 12:00 — 20:00 п’ятниця</li>
-        <li>11:00 — 19:00 субота</li>
-        <li>11:00 — 19:00 неділя</li>
-      </div>
-    </div>
-
-    <div class="work__add">
-      <p class="work__text">Вихідні: понеділок, <br> вівторок <br>
-        Каса припиняє роботу за <br> 1 годину
-        до закриття <br> музею
-      </p>
-    </div>
-  </div>
-
-
-
-
-
-
+              <a class="header__btn" href="#"></a>
             </div>
           </div>
-        </nav>
+
+        </div>
+      </div>
+
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+
+        <div class="menu__content">
+
+          <div class="menu__header">
+
+            <a href="#" class="menu__close"></a>
+
+            <div class="menu__topBlock">
+
+              <div class="menu__list">
+                <div class="menu__list--top">
+                  <li class="menu__item">
+                    <a href="#home" class="menu__link">Галерея</a>
+                  </li>
+
+                  <li class="menu__item">
+                    <a href="#event" class="menu__link">Виставки та <br> події </a>
+                  </li>
+                </div>
+
+                <div class="menu__list--bottom">
+                  <li class="menu__item">
+                    <a href="#home" class="menu__link">Про нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#home" class="menu__link">Контакти</a>
+                  </li>
+                </div>
+              </div>
+            </div>
+
+            <hr class="menu__hr">
+
+            <div class="menu__work work">
+              <div class="work--wrapper">
+                <h4 class="work__title">Графік роботи</h4>
+                <div class="work__title--list">
+                  <li> <span>12:00 — 20:00</span> середа</li>
+                  <li><span>12:00 — 20:00</span> четвер</li>
+                  <li><span>12:00 — 20:00</span> п’ятниця</li>
+                  <li><span>11:00 — 19:00</span> субота</li>
+                  <li><span>11:00 — 19:00</span> неділя</li>
+                </div>
+              </div>
+
+              <div class="work__add">
+                <p class="work__text"> <span>Вихідні:</span>
+                  понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
 
 
+    <main class="main">
+      <div class="container">
+        <div class="main__container" id="event">
+          <h1 class="title">Актуальні події</h1>
+
+          <div class="main__content">
+            <div class="main__events">
+
+              <img class="main__img" src="/images/picture/pic1.svg" alt="pic">
+
+              <div class="main__text text">
+
+                <div class="text__exhibition">
+                  <p class="text__exhibition--title">ВИСТАВКА</p>
+                  <p class="text__exhibition--subtitle">26.08-29.11.2019</p>
+                </div>
+
+                <p class="text__title">Йду і повертаюсь</p>
+                <p class="text__subtitle">Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+
+              </div>
+            </div>
+
+            <div class="main__events top">
+
+              <img class="main__img" src="/images/picture/pic2.svg" alt="pic">
+
+              <div class="main__text text">
+
+                <div class="text__exhibition">
+                  <p class="text__exhibition--title">ВИСТАВКА</p>
+                  <p class="text__exhibition--subtitle">26.08-29.11.2019</p>
+                </div>
+
+                <p class="text__title">І спогади і мрії</p>
+                <p class="text__subtitle">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="main__bg bg">
+
+        <img class="bg__img" src="/images/picture/pic3.svg" alt="bg">
+
+        <div class="bg__text">
+          <div class="bg__exhibition">
+            <p class="bg__exhibition--title">ЛЕКЦІЯ</p>
+            <p class="bg__exhibition--subtitle">26/08/2019 - 11:00</p>
+          </div>
+
+          <p class="bg__title">Від класицизму до романтизму</p>
+        </div>
+
+      </div>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
