made swiper for gallery in html

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
@@ -99,6 +100,53 @@
           Галерея
         </h2>
 
+        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="swiper-zoom-container">
+                <img src="./images/gallery/gallery_image1.jpg"
+                  alt="gallery_image1"
+                >
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="swiper-zoom-container">
+                <img src="./images/gallery/gallery_image2.jpg"
+                  alt="gallery_image2"
+                >
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper-zoom-container">
+                <img src="./images/gallery/gallery_image3.jpg"
+                  alt="gallery_image3"
+                >
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="swiper-zoom-container">
+                <img src="./images/gallery/gallery_image4.jpg"
+                  alt="gallery_image4"
+                >
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="swiper-zoom-container">
+                <img src="./images/gallery/gallery_image5.jpg"
+                  alt="gallery_image4"
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+<!--
         <div class="slider" id="mySlider">
           <div class="slider-slides">
             <article class="slider-slide is-active">
@@ -146,9 +194,28 @@
             </button>
           </div>
         </div>
+-->
       </section>
 
     </main>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        zoom: true,
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+      });
+    </script>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
