add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,316 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <title>museum</title>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header" id="top">
+      <div class="header__container">
+        <div class="top-bar">
+          <div class="top-bar__container">
+            <a href="#menu" class="top-bar__menu"></a>
+            <a href="#" class="top-bar__link">Na<br>mu</a>
+          </div>
+        </div>
+
+        <div class="header__bottom">
+          <a href="#menu" class="header__menu"></a>
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__button__container">
+            <button class="header__button">Квитки</button>
+            <button class="header__button__second">
+              <span class="header__button__arrow"></span>
+            </button>
+          </div>
+
+          <div class="header__bottom__box">
+            <a href="#events" class="header__bottom__text">Події</a>
+            <div class="header__bottom__line"></div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu aside" id="menu">
+      <div class="aside__box">
+        <div class="aside__container">
+          <div class="aside__top">
+            <a href="#" class="aside__close"></a>
+
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#galery">Галерея</a>
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+              </ul>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#subscribe">Про Нас</a>
+                  <a class="nav__link" href="#footer">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="aside__line"></div>
+
+          <div class="aside__graph">
+            <p class="aside__text aside__head">Графік роботи</p>
+            <p class="aside__bold">12:00 — 20:00 <span class="aside__text">середа</span></p>
+            <p class="aside__bold">12:00 — 20:00 <span class="aside__text">четвер</span></p>
+            <p class="aside__bold">12:00 — 20:00 <span class="aside__text">п’ятниця</span></p>
+            <p class="aside__bold">12:00 — 19:00 <span class="aside__text">субота</span></p>
+            <p class="aside__bold">12:00 — 19:00 <span class="aside__text">неділя</span></p>
+          </div>
+
+          <div class="aside__last">
+            <p class="aside__bold">Вихідні: <span class="aside__text">понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</span></p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <section id="events" class="events">
+      <h2 class="events__second__title">Актуальні події</h2>
+      <div class="events__card">
+        <img
+          src="images/events/first.png"
+          class="events__photo"
+          alt="Йду і повертаюсь"
+        >
+        <div class="events__card__container">
+          <div class="events__container">
+            <p class="events__container__text">ВИСТАВКА</p>
+            <h4 class="events__container__date">26.08-29.11.2019</h4>
+          </div>
+
+          <div class="events__name">
+            <h3 class="events__title">Йду і повертаюсь</h3>
+            <div class="events__box"></div>
+          </div>
+
+          <p class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+        </div>
+      </div>
+
+      <div class="events__card">
+        <img
+          src="images/events/second.png"
+          class="events__photo"
+          alt="І спогади і мрії"
+        >
+        <div class="events__card__container">
+          <div class="events__container">
+            <p class="events__container__text">ВИСТАВКА</p>
+            <h4 class="events__container__date">26.08-29.11.2019</h4>
+          </div>
+
+          <div class="events__name">
+            <h3 class="events__title">І спогади і мрії</h3>
+            <div class="events__box"></div>
+          </div>
+
+          <p class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="lection" class="lection">
+      <div class="lection__container">
+        <div class="lection__container__date">
+          <p class="lection__gray">ЛЕКЦІЯ</p>
+          <h4 class="lection__green">26/08/2019 - 11:00</h4>
+        </div>
+
+        <h3 class="lection__title">Від класицизму до романтизму</h3>
+      </div>
+    </section>
+
+    <section id="galery" class="galery">
+      <h3 class="galery__title">Галерея</h3>
+      <img
+        class="galery__photo"
+        src="images/galery/first.png"
+        alt="Жінка в традиційному одягу"
+      >
+
+      <img
+        class="galery__photo galery__photo__2"
+        src="images/galery/second.png"
+        alt="Гуси"
+      >
+
+      <img
+        class="galery__photo galery__photo__3"
+        src="images/galery/third.png"
+        alt="Зимня хата"
+      >
+
+      <img
+        class="galery__photo galery__photo__4"
+        src="images/galery/four.png"
+        alt="Гуси"
+      >
+
+      <img
+        class="galery__photo galery__photo__5"
+        src="images/galery/five.png"
+        alt="Гуси"
+      >
+
+      <div class="galery__container">
+        <img
+          class="galery__slider"
+          src="images/galery/slider.png"
+          alt="slider"
+        >
+      </div>
+    </section>
+
+    <section id="subscribe" class="subscribe">
+      <div class="subscribe__container">
+        <h3 class="subscribe__title">Підписка</h3>
+        <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <div class="subscribe__box">
+          <form
+            onsubmit="this.reset(); return false;"
+            class="subscribe__form"
+            action="submit-page.php"
+            method="get"
+            id="myForm"
+          >
+            <input
+              type="email"
+              name="email"
+              placeholder="Email"
+              class="subscribe__email"
+              required
+              form="myForm"
+              autocomplete="off"
+            >
+
+            <button class="subscribe__button" type="submit" >
+              <span class="subscribe__button__icon"></span>
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer" id="footer">
+      <div class="footer__top">
+        <img
+          src="images/footer/namu.svg"
+          alt="footer logo"
+          class="footer__logo"
+        >
+
+        <div class="footer__container">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/"
+            class="footer__icon footer__icon__facebook">
+          </a>
+          <a
+            target="_blank"
+            href="https://www.instagram.com/"
+            class="footer__icon footer__icon__instagram"
+          ></a>
+        </div>
+      </div>
+
+      <div class="footer__graphic">
+        <p class="footer__text">Графік роботи</p>
+
+        <div class="footer__graphic__time">
+          <p class="footer__bold">12:00 — 20:00 <span class="footer__text">середа</span></p>
+          <p class="footer__bold">12:00 — 20:00 <span class="footer__text">четвер</span></p>
+          <p class="footer__bold">12:00 — 20:00 <span class="footer__text">п'ятниця</span></p>
+          <p class="footer__bold">11:00 — 19:00 <span class="footer__text">субота</span></p>
+          <p class="footer__bold">11:00 — 19:00 <span class="footer__text">неділя</span></p>
+          <br>
+          <p class="footer__text">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину<br> до закриття музею</p>
+        </div>
+      </div>
+
+      <div class="footer__contacts">
+        <p class="footer__text">Контакти:</p>
+
+        <div class="footer__contacts__container">
+          <a
+          href="https://maps.app.goo.gl/7jSzUiNVRURDSZxM8"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            вул. Грушевського, 6;
+          </a>
+          <a
+          href="#"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            Київ, 01001<br>
+          </a>
+          <a
+          href="tel:+380442781357"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+          <a
+          href="#"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            факс +38 (044) 278-74-54
+          </a>
+          <a
+          href="mailto:info@namu.kiev.ua"
+          class="footer__contacts__link"
+          target="_blank"
+          >
+            e-mail: info@namu.kiev.ua
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__button__container">
+        <div class="footer__button">
+          <a href="#" class="footer__button__icon"></a>
+        </div>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <nav class="footer__nav">
+        <ul class="footer__nav__list">
+          <li class="footer__nav__item">
+            <a class="footer__nav__link" href="#galery">Галерея</a>
+            <a class="footer__nav__link" href="#events">Виставки та події</a>
+          </li>
+        </ul>
+        <ul class="footer__nav__list">
+          <li class="footer__nav__item">
+            <a class="footer__nav__link" href="#subscribe">Про Нас</a>
+            <a class="footer__nav__link" href="#footer">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="footer__end">
+        <p class="footer__end__text">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
+
   </body>
 </html>
