create subscribe section

--- a/src/index.html
+++ b/src/index.html
@@ -35,15 +35,15 @@
         МУЗЕЙ
       </h1>
 
-      <div class="button">
+      <div class="button button--green">
         <a href="#" class="button__tickets">КВИТКИ</a>
-        <button class="button__arrow"></button>
+        <button href="#" class="button__arrow button__arrow--green"></button>
       </div>
     </header>
 
     <main class="main">
       <section class="events">
-        <h2 class="title title--secondary">
+        <h2 class="title title__secondary">
           Актуальні
           <br>
           події
@@ -96,7 +96,7 @@
       </section>
 
       <section class="gallery">
-        <h2 class="title title--secondary">
+        <h2 class="title title__secondary">
           Галерея
         </h2>
 
@@ -195,6 +195,27 @@
           </div>
         </div>
 -->
+      </section>
+
+      <section class="subscribe">
+        <h2 class="title title__secondary subscribe__title">
+          Підписка
+        </h2>
+
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <div class="button button--red">
+          <input name="email"
+            type="email"
+            id="email"
+            placeholder="E-mail"
+            class="button button__subscribe"
+            required
+          >
+          <button class="button__arrow button__arrow--red"></button>
+        </div>
       </section>
 
     </main>
