add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -268,7 +268,7 @@
             тел. +38 (044) 278-13-57
           </a>
           <a
-          href="#"
+          href="tel:+380442787454"
           class="footer__contacts__link"
           target="_blank"
           >
