--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
   <body class="page__body">
     <header class="header">
       <div class="container">
-
         <a class="header__menu" href="#menu">
           <img src="./images/icons/baseline-menu-24px.svg" alt="baseline-menu">
         </a>
@@ -37,7 +36,11 @@
         <div class="header__content__ticket">
           <a class="header__content__ticket__link" href="#events">КВИТКИ</a>
           <a class="header__content__ticket__button" href="#events">
-            <img src="./images/icons/baseline-keyboard_arrow_right-24px.svg" alt="arrow_right">
+            <img
+              class="header__content__ticket__button__arrow"
+              src="./images/icons/baseline-keyboard_arrow_right-24px.svg"
+              alt="arrow_right"
+            >
           </a>
         </div>
       </div>
@@ -48,7 +51,7 @@
         <div class="container">
           <div class="menu__content__top-bar">
             <a class="menu__content__top-bar__close" href="#">
-              <img src="./images/icons/icon-close.svg" alt="#">
+              <img src="./images/icons/icon-close.svg" alt="icon-close">
             </a>
             <div class="menu__content__top-bar__block menu__content__top-bar__block--retreat">
               <a class="menu__content__top-bar__points" href="#gallery">Галерея</a>
@@ -248,7 +251,13 @@
         </div>
         <div class="footer__contact" id="contact">
           <p class="footer__contact__title">Контакти:</p>
-          <a class="footer__contact__adress" href="#">вул. М. Грушевського, 6; Київ, 01001</a>
+          <a
+            class="footer__contact__adress"
+            href="https://maps.app.goo.gl/LPvMqSPYSRfHTuQ26"
+            target="_blank"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
           <a class="footer__contact__adress" href="tel:+380442781357">тел: +38 (044) 278-13-57</a>
           <a class="footer__contact__adress" href="tel:+380442787454">факс: +38 (044) 278-74-54</a>
           <a class="footer__contact__adress" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
