fixed separator & subscribe positioning / start contact-us section

--- a/src/index.html
+++ b/src/index.html
@@ -81,10 +81,7 @@
       </section>
 
       <section class="separator">
-        <img src="./images/separator_image.jpg"
-          alt="separator-image"
-          class="separator__image"
-        >
+        <div class="separator__image"></div>
 
         <div class="separator__frame">
           <p class="separator__date">ЛЕКЦІЯ <span class="separator__date--highlight">26/08/2019-11:00</span></p>
@@ -198,6 +195,7 @@
       </section>
 
       <section class="subscribe">
+        <div class="subscribe__background"></div>
         <h2 class="title title__secondary subscribe__title">
           Підписка
         </h2>
@@ -206,16 +204,50 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
 
-        <div class="button button--red">
+        <div class="button button--red subscribe__button">
           <input name="email"
             type="email"
             id="email"
             placeholder="E-mail"
-            class="button button__subscribe"
+            class="button
+            button__subscribe"
             required
           >
           <button class="button__arrow button__arrow--red"></button>
         </div>
+      </section>
+
+      <section class="contact-us">
+        <div class="contact-us__headline">
+          <a href="#" class="contact-us__logo logo"></a>
+          <div class="contact-us__wrap-socials">
+            <a
+              href="https://www.facebook.com/"
+              class="contact-us__social contact__social--fb"
+              target="_blank"
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              class="contact-us__social contact__social--inst"
+              target="_blank"
+            ></a>
+          </div>
+        </div>
+
+        <address class="address">
+          <h4 class="title title__fourth">Графік роботи</h4>
+          <p>
+            12:00 - 20:00 середа
+            12:00 - 20:00  четвер
+            12:00 - 20:00 п’ятниця
+            11:00 - 19:00 субота
+            11:00 - 19:00 неділя
+
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </address>
       </section>
 
     </main>
