add task corrections

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
                 <img
                   src="/images/sections/first-event-img.png"
                   alt="Йду і повертаюсь"
-                  class="event__photo"
+                  class="event__photo event__photo-big"
                 >
               </a>
             </div>
@@ -204,7 +204,7 @@
                 <img
                   src="/images/sections/second-event-img.png"
                 alt="Спогади і мрії"
-                  class="event__photo"
+                  class="event__photo event__photo-big"
                 >
               </a>
             </div>
