html & css for section contact us

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 
         <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
 
-        <h3 class="title title--third title--rectangle">
+        <h3 class="title title__third title--rectangle">
           Йду i повертаюсь
         </h3>
 
@@ -71,7 +71,7 @@
 
         <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
 
-        <h3 class="title title--third title--rectangle">
+        <h3 class="title title__third title--rectangle">
           I спогади i мрії
         </h3>
 
@@ -218,36 +218,55 @@
       </section>
 
       <section class="contact-us">
-        <div class="contact-us__headline">
-          <a href="#" class="contact-us__logo logo"></a>
-          <div class="contact-us__wrap-socials">
-            <a
-              href="https://www.facebook.com/"
-              class="contact-us__social contact__social--fb"
-              target="_blank"
-            ></a>
-            <a
-              href="https://www.instagram.com/"
-              class="contact-us__social contact__social--inst"
-              target="_blank"
-            ></a>
-          </div>
+        <div class="logo"></div>
+        <div class="socials">
+          <a
+            href="https://www.facebook.com/"
+            class="socials__fb"
+            target="_blank">
+          </a>
+          <a
+            href="https://www.instagram.com/"
+            class="socials__insta"
+            target="_blank">
+          </a>
+        </div>
+        <div class="opening">
+          <h4 class="title title__fourth">Графік роботи</h4>
+
+          <article>
+            <p><span class="opening--hour">12:00 - 20:00</span> середа</p>
+            <p><span class="opening--hour">12:00 - 20:00</span>  четвер</p>
+            <p><span class="opening--hour">12:00 - 20:00</span> п’ятниця</p>
+            <p><span class="opening--hour">11:00 - 19:00</span> субота</p>
+            <p><span class="opening--hour">11:00 - 19:00</span> неділя</p>
+            <br><br>
+            Вихідні понеділок, вівторок
+            Kaca припиняє роботу за 1 годину
+            до закриття музею
+          </article>
         </div>
 
         <address class="address">
-          <h4 class="title title__fourth">Графік роботи</h4>
-          <p>
-            12:00 - 20:00 середа
-            12:00 - 20:00  четвер
-            12:00 - 20:00 п’ятниця
-            11:00 - 19:00 субота
-            11:00 - 19:00 неділя
-
-            Вихідні понеділок, вівторок
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </p>
+          <h4 class="title title__fourth">Контакти:</h4>
+          <p class="address__address">вул. M. Грушевського, 6; Київ, 01001</p>
+          <p class="address__phone">тел. +38 (044) 278-13-57</p>
+          <p class="address__fax">факс +38 (044) 278-74-54</p>
+          <p class="address__email">e-mail: info@namu.kiev.ua</p>
         </address>
+        <div class="line">
+          <hr class="line__horizontal">
+        </div>
+        <div class="links">
+          <a>Галерея</a>
+          <br><br>
+          <a>Виставки та події</a>
+        </div>
+        <div class="links">
+          <a>Про Hac</a>
+          <br><br>
+          <a>Контакти</a>
+        </div>
       </section>
 
     </main>
