--- a/src/index.html
+++ b/src/index.html
@@ -244,17 +244,21 @@
             <h2 class="follow__title">Підписка</h2>
             <p class="follow__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
             <div class="follow__button">
-              <form class="follow__form">
+              <form
+                action="mailto:info@namu.kiev.ua"
+                method="post"
+                class="follow__form">
                 <label>
                   <input
                     autocomplete="on"
                     required
                     class="follow__form-input"
-                    type="text"
+                    type="email"
+                    name="email"
                     placeholder="E-mail"
                   >
                   <a href="#">
-                    <button class="follow__form-submit">
+                    <button type="submit" class="follow__form-submit">
                       <img src="./images/main/arrow_right.svg" alt="#">
                     </button>
                   </a>
