--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,11 @@
         <div class="header__button">
           <button class="header__button-top">
               КВИТКИ
-            <a href="https://museum-portal.com/" class="icon icon--arrow">
+            <a
+              href="https://museum-portal.com/"
+              target="_blank"
+              class="icon icon--arrow"
+            >
               <div class="header__button-img">
                 <img src="./images/icon/baseline-keyboard_arrow_right-24px.svg" alt="#">
               </div>
@@ -244,8 +248,8 @@
             <h2 class="follow__title">Підписка</h2>
             <p class="follow__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
             <div class="follow__button">
-              <form
-                class="follow__form">
+              <form class="follow__form"
+                onsubmit="this.reset(); return false;">
                 <label>
                   <input
                     autocomplete="on"
@@ -285,15 +289,15 @@
                       alt="#">
                   </a>
                   <div class="footer__icons">
-                    <a href="https://www.facebook.com/namu.museum/?locale=ru_RU">
+                    <a href="https://www.facebook.com/namu.museum/?locale=ru_RU" target="_blank">
                       <img
-                        class="footer__fb"
+                        class="footer__soc"
                         src="./images/footer/facebook-letter-logo.svg"
                         alt="№">
                     </a>
-                    <a href="https://www.instagram.com/namu.museum/">
+                    <a href="https://www.instagram.com/namu.museum/" target="_blank">
                       <img
-                        class="footer__inst"
+                        class="footer__soc"
                         src="./images/footer/instagram (3).svg"
                         alt="#">
                     </a>
@@ -337,11 +341,19 @@
                     >
                     вул. М. Грушевського, 6; Київ, 01001
                     </a>
-                    <a class="footer__blank" href="tel:+38 (044) 278-13-57">
+                    <a
+                      class="footer__blank"
+                      href="tel:+38 (044) 278-13-57"
+                      target="_blank"
+                    >
                       тел. +38 (044) 278-13-57
                       факс +38 (044) 278-74-54
                     </a>
-                    <a class="footer__blank" href="mailto:info@namu.kiev.ua">
+                    <a
+                      class="footer__blank"
+                      href="mailto:info@namu.kiev.ua"
+                      target="_blank"
+                    >
                       e-mail: info@namu.kiev.ua
                     </a>
                   </div>
